fixed alignment of task body

--- a/client/main.css
+++ b/client/main.css
@@ -371,3 +371,8 @@ html .table thead th {
     border: solid white;
     border-width: 0 3px 3px 0;
 }
+
+#taskBody {
+    display: flex;
+    flex-direction: row;
+}
